# fast-api-microservice-test

./: README.md  docker-compose.yml  nginx.conf
auth/: Dockerfile  main.py  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 57b551a511de_add_users.py  cb0dfd1b5880_create_user_table.py
auth/api/: auth.py  users.py
auth/db/: service.py
auth/db/crud/: users.py
auth/models/: users.py
auth/schemas/: users.py
routes/: main.py  pyproject.toml
routes/alembic/: env.py
routes/alembic/versions/: 486a371e0899_create_base_tables.py  6973257e41fd_generate_million_points.py
routes/api/: analitics.py  points.py  routes.py  utils.py
routes/api/analitic_utils/: utils.py
routes/db/: database.py  service.py
routes/db/crud/: points.py  routes.py
routes/models/: routes.py
routes/schemas/: report.py  routes.py
