[tool.poetry]
name = "fast-api-microservice-test"
version = "0.1.0"
description = ""
authors = ["Akinshin Anatoly <a.akinshin@satvaspace.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
SQLAlchemy = "^1.4.38"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
